--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,4 @@ APP_ID="INSERT_APPID"
 DEV_PORTAL_API_KEY="APIKEY"
 WLD_CLIENT_ID=
 WLD_CLIENT_SECRET=
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL= 
