--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   "dependencies": {
     "@worldcoin/minikit-js": "1.3.0",
     "eruda": "^3.2.3",
+    "framer-motion": "^11.18.1",
+    "lucide-react": "^0.469.0",
     "next": "14.2.6",
     "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18",
-    "lucide-react": "^0.469.0"
+    "react-dom": "^18"
   },
-  
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
